testcases/errors/primitives0.boo
"""
primitives0.boo(6,9): BCE0057: Primitive 'string' can't be redefined.
primitives0.boo(6,27): BCE0057: Primitive 'int' can't be redefined.
primitives0.boo(7,5): BCE0057: Primitive 'bool' can't be redefined.
"""
def say(string as string, int as int):
	bool as real = 3.0
